# gtt-ticketing-problem

./: .gitignore  LICENSE  README.md  big_arena.csv  data.csv  gtt-ticketing-problem.cabal  results.html
app/: Main.hs
bench/: Main.hs
lib/: Ticketing.hs
