cabal-version:      3.0
name:               gtt-ticketing-problem
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Riuga
maintainer:         riuga@tuta.io
-- copyright:
category:           Assignment
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable gtt-ticketing-problem
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.1.0,
                      bytestring,
                      text,
                      vector,
                      containers,
                      cassava
    hs-source-dirs:   app
    default-language: GHC2021
