cabal-version:      3.0
name:               gtt-ticketing-problem
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Riuga
maintainer:         riuga@tuta.io
-- copyright:
category:           Assignment
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common settings
    ghc-options: -Wall
    build-depends:    base ^>=4.17.1.0,
                      bytestring,
                      text,
                      vector,
                      deepseq,
                      containers,
                      cassava

executable gtt-ticketing-problem
    import:           settings
    main-is:          Main.hs
    build-depends:    gtt-ticketing-problem
    default-language: GHC2021
    hs-source-dirs:   app

library
    import:           settings
    exposed-modules:  Ticketing
    default-language: GHC2021
    hs-source-dirs:   lib

benchmark combinations
    import:           settings
    type:             exitcode-stdio-1.0
    build-depends:    gtt-ticketing-problem,
                      random,
                      criterion
    default-language: GHC2021
    main-is:          Main.hs
    hs-source-dirs:   bench
